--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
     "vue": "^2.5.17",
+    "vue-awesome": "^3.1.3",
     "vue-scroll-picker": "^0.1.4"
   },
   "devDependencies": {
